# ngen-forcing

./: .gitignore  .gitlab-ci.yml  DOCKER.md  Dockerfile.bmi-forcings  Dockerfile.dependencies  Dockerfile.lumped-forcings  Dockerfile.ngencoastal  Dockerfile.sfincs  Dockerfile.test  LICENSE  README.md  build_cluster.sh  build_ngen_ngencerf.sh  build_singularity.sh  config_usecase1.yaml  configure_cluster.sh  fix_pw_password.sh  main.py  pyproject.toml  pytest.ini  sonar-project.properties  version.txt
.github/workflows/: cicd.yml  dependencies.yml
ESMF_Mesh_Domain_Configuration_Production/: NextGen_hyfab_to_ESMF_Mesh.py  environment.yml
Forcing_Extraction_Scripts/: environment.yml  forecast_base.py  forecast_download_base.py
Forcing_Extraction_Scripts/Alaska/: get_Alaska_HRRR new.py  get_Alaska_HRRR.py  get_Alaska_HRRR_AnA.py  get_Alaska_StageIV new.py  get_Alaska_StageIV.py  get_MRMS_MultiSensor_Alaska new.py  get_MRMS_MultiSensor_Alaska.py  get_MRMS_Radar_Alaska.py  get_prod_NAM_Nest_Alaska new.py  get_prod_NAM_Nest_Alaska.py  get_prod_NBM_Alaska new.py  get_prod_NBM_Alaska.py
Forcing_Extraction_Scripts/CONUS/: get_CONUS_HRRR_subhourly.py  get_conus_HRRR.py  get_conus_HRRR_AnA.py  get_conus_HRRR_subhourly.py  get_conus_MRMS_MultiSensor.py  get_conus_MRMS_Multisensor.py  get_conus_MRMS_Radar.py  get_conus_RAP.py  get_conus_RAP_AnA.py  get_conus_StageIV.py  get_prod_NBM.py  get_prod_NBM_Conus.py
Forcing_Extraction_Scripts/Global/: get_CFSv2.py  get_prod_GFS.py
Forcing_Extraction_Scripts/Hawaii/: get_ARW_Hawaii.py  get_AWR_Hawaii.py  get_MRMS_MultiSensor_Hawaii.py  get_MRMS_Radar_Hawaii.py  get_prod_NAM_NEST_Hawaii_ANA.py  get_prod_NAM_Nest_Hawaii.py  get_prod_NBM_Hawaii.py  get_prod_NBM_Hawaii_ANA.py
Forcing_Extraction_Scripts/Puerto_Rico/: get_ARW_Puerto_Rico.py  get_MRMS_MultiSensor_Puerto_Rico.py  get_MRMS_Radar_Puerto_Rico.py  get_prod_NAM_Nest_PuertoRico.py  get_prod_NAM_Nest_Puerto_Rico.py  get_prod_NAM_Nest_Puerto_Rico_AnA.py  get_prod_NBM_Puerto_Rico.py  get_prod_NBM_Puerto_Rico_AnA.py
NextGen_Forcings_Engine_BMI/: bmi_wrapper.py  environment.yml  esmf_creation.py  forcing_extraction.py  git_util.py  run_bmi_model.py  run_bmi_unit_test.py  sr_config.yml  wrapper_config.yml
NextGen_Forcings_Engine_BMI/BMI_NextGen_Configs/: README.md
NextGen_Forcings_Engine_BMI/NextGen_Forcings_Engine/: __init__.py  __main__.py  bmi_grid.py  bmi_model.py  esmf_utils.py  general_utils.py  historical_forcing.py  log_level_set.py  model.py  nc_utils.py  nwm_proc.py  os_utils.py  retry_utils.py  status_report.py
NextGen_Forcings_Engine_BMI/post_process/: netcdf_to_csv.py
NextGen_Lumped_Forcings_Driver/: NextGen_AORC_forcings_module.py  NextGen_lumped_forcings_driver.py  batch_proc.sh  conus_batch_proc.sh  conus_run.py  environment.yml  pyproject.toml  run.py
SNODAS/: README.md
SWE_Scripts/SNODAS/: snodas_downloader.sh  snodas_mapper.py
SWE_Scripts/SNODAS_preprocessing/: README.md  snodas_convert.py
SWE_Scripts/SWE_mapping/: README.md  README_SIM.md  convert_swe.py  environment.yml  (+4 more)
Streamflow_Scripts/: README.md  environment.yml  requirements.txt
coastal/: README.md  environment.yml
create_release/: createRelease.sh  createReleaseConfig.json  createReleaseConfig_sample.json  create_release.md  release_summary.txt
docker/: run-ngen-forcing.sh
download_data/: data_downloader.py
nextgen_forcings_ewts/: pyproject.toml
parallel_works_scripts/: build_cluster.sh  cleanup_cluster.sh  configure_cluster.sh
process_data/: extract_noaa_stations_in_domain.py
soil_moisture/: README.md  environment.yml
soil_moisture_processing/: environment.yml
swe_mapping/: environment.yml  setup.py
swe_processing/: README_wip.md  environment.yml  map_wrapper_sample.py  setup.py  snotel_proc_wrapper.py  ts_wrapper_sample.py
swe_timeseries/: environment.yml  requirements.txt  setup.py  wrapper.py
tests/: README.md  conftest.py  test_config_classes.py  test_consts.py  test_utils.py
util/: conda_util.py
(+671 files in other folders)
