[project]
name = "ngen-forcings"
authors = [
    { name = "Jason Ducker", email = "jason.ducker@noaa.gov" },
    { name = "Kyle Larkin", email = "kyle.s.larkin@rtx.com"},
    { name = "Peter Kronenberg", email = "peter.a.kronenberg@rtx.com"},
    { name = "Jeff Wade", email = "jeff.s.wade@rtx.com"}
]
description = "NextGen Forcings Engine"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "cmake",
    "dask",
    "exactextract",
    #"gdal == 3.7.3",
    "geopandas",
    "multiprocess",
    "netCDF4",
    "numpy",
    "pyopenssl",
    "pandas",
    "pathlib",
    "pyarrow",
    "regex",
    "s3fs",
    "scipy",
    "shapely",
    "wget",
    "xarray",
    "zarr"
]

[project.urls]
Repository = "https://github.com/NGWPC/ngen-forcing"
Issues = "https://github.com/NGWPC/ngen-forcing/issues"